# Temporal-Replay-26-Badge

./: .gitignore  CLAUDE.md  README.md
.github/ISSUE_TEMPLATE/: community-app.yml
.github/workflows/: community-apps.yml  release-firmware.yml
apps/example-app/: main.py  manifest.json
assets/: Joystick-Outline.20260207-141136.FCBak  Joystick-Outline.FCStd  Joystick-Outline.dxf  OLED 2.42 V1.1 SSD1309.STEP  SSD1309-devboard.step  ST7305.step  floor-mockup_128-64.xbm  level0-outline.xbm  level00.xcf  lobby.xbm  lobby.xcf  mail.xbm  road.xbm  star1.xbm
assets/credits/: credits.json
community/: README.md  external.json
community/example_hello/: icon.py  main.py  manifest.toml
data/: README.md
docs/: hardware-test-harness.md  offline-firmware-teardown-task-queue.md  schedule-api-format-gaps.md
firmware/: .gitignore  CMakeLists.txt  README2.md  TODO.md  build.sh  flash.sh  flash_factory.sh  flash_loop.sh  flash_loop_gui.py  flash_loop_gui2.py  flash_loop_gui_Kevin_is_extra.py  make_factory.sh  partitions_replay_16MB.csv  partitions_replay_8MB.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.echo-dev  sdkconfig.echo-dev  sdkconfig.echo-dev-idf  settings.txt  settings.txt.example  wifi.local.env  wifi.local.env.example  wifi.local2.env
firmware/boards/: temporal-badge-delta.json
firmware/cmake/: prebuild.cmake
firmware/codeDocs/: BoopSystem.md  NotificationSystem.md
firmware/data/: API_REFERENCE.md
firmware/docs/: MICROPYTHON-MODULES.md  OTA-CONTINUATION-BRIEF.md  OTA-MAINTAINER.md  STORAGE-MODEL.md
firmware/initial_filesystem/: manifest.json  messages.json
firmware/micropython/: replay_embed.mk  setup_arduino_embed.sh
firmware/plans/: 01-backend-integration.md  02-ir-multiframe-parity.md  03-chat-bubble-ui.md  04-keyboard-polish.md  05-oled-ui-input-contract.md  plans.md
firmware/scripts/: badge_sync.py  bump_version.sh  fetch_micropython_sources.py  generate_startup_files.py  inject_version.py  patch_network_client_secure.py  startup_hash_history.json  verify_firmware_version.py
firmware/src/: CMakeLists.txt  README.md  idf_component.yml  main.cpp
firmware/src/api/: TlsGate.cpp  WiFiService.cpp  WiFiService.h
firmware/src/apps/: AppRegistry.cpp  AppRegistry.h  MenuOrderStore.cpp
firmware/src/boops/: BoopsHandlers.cpp  BoopsJournal.cpp
firmware/src/doom/: DoomScreen.cpp  DoomScreen.h
firmware/src/hardware/: CharlieDefines.h  DeltaDefines.h  IMU.cpp  Inputs.cpp  LEDmatrix.cpp  LEDmatrix.h  PanicReset.cpp  Power.cpp  Power.h  oled.h
firmware/src/hardware/battery/: BatteryAlgorithm.h
firmware/src/hw/ir/: nec_rx.c  nec_rx.h  nec_tx.c  nec_tx.h
firmware/src/identity/: BadgeInfo.cpp  BadgeVersion.h  GeneratedFirmwareVersion.h
firmware/src/infra/: BadgeConfig.cpp  BadgeConfig.h  BuildWifiConfig.generated.h  RepoUrls.h  Scheduler.cpp
firmware/src/ir/: BadgeIR.cpp  BadgeIR.h
firmware/src/led/: LEDAppRuntime.cpp  LEDAppRuntime.h
firmware/src/micropython/: MicroPythonBridge.cpp  MicroPythonMatrixService.cpp  ReplayMicropythonAPI.cpp  StartupFiles.cpp  StartupFiles.h  StartupFilesData.h
firmware/src/micropython/badge_mp_api/: mp_api_display.cpp  mp_api_ir.cpp  mp_api_led.cpp
firmware/src/ota/: AssetRegistry.cpp  AssetRegistry.h  BadgeOTA.cpp  BadgeOTA.h  OTAHttp.cpp  OTAHttp.h  OTAService.cpp
firmware/src/screens/: AnimTestScreen.cpp  AnimTestScreen.h  AssetLibraryScreen.cpp  AssetLibraryScreen.h  BadgeInfoViewScreen.cpp  BadgeInfoViewScreen.h  ContactDetailScreen.cpp  FileOpener.cpp  FileOpener.h  FileViewScreen.cpp  FileViewScreen.h  FilesScreen.cpp  FilesScreen.h  GridMenuScreen.cpp  GridMenuScreen.h  HelpScreen.cpp  LEDScreen.cpp  LEDScreen.h  MenuOrderScreen.cpp  Screen.h  SettingsScreen.cpp  SettingsScreen.h  TextInputScreen.cpp  TextInputScreen.h  UpdateFirmwareScreen.cpp  UpdateFirmwareScreen.h  WifiScreen.cpp  WifiScreen.h
firmware/src/screens/draw/: DrawIcons.h  DrawPickerScreen.cpp  DrawPickerScreen.h  DrawScreen.cpp  DrawScreen.h
firmware/src/ui/: AppIcons.h  BootSplash.cpp  BootSplash.h  ButtonGlyphs.cpp  ButtonGlyphs.h  GUI.cpp  OLEDLayout.cpp  OLEDLayout.h  QRCodePlate.cpp  UpdateIcon.h  WifiIcon.h
hardware/ALPHA/: Temporal-Badge-Prototype.20260211-231143.FCBak  Temporal-Badge-Prototype.FCStd  Temporal-Badge.kicad_pcb  Temporal-Badge.kicad_prl  Temporal-Badge.kicad_pro  Temporal-Badge.kicad_sch  fp-info-cache  sym-lib-table
hardware/BRAVO/: BETA-ENCLOSURE.20260216-132517.FCBak  Temporal-Badge-Prototype.20260128-113225.FCBak  V0-BRAVO_ENCLOSURE-R0.FCStd  v0_BRAVO-Front-R0.stl
hardware/export/: Temporal-Badge-BRAVO.csv
ignition/: README.md  flash.py  setup.sh  start.sh
ignition/flash_worker/: activities.py  requirements.txt  worker.py  workflows.py
registry/: README.md  community_apps.json  community_apps.schema.json  registry.json
release-assets/: README.md  manifest.json
scripts/: convert_zigmoji.py  gen_credit_xbms.py  gen_sponsor_xbms.py  regenerate_community_apps.py  repo_urls.py  resolve_push_tag.sh  stage_release_assets.py  sync_firmware_release.sh  trace_xbm_polyline.py
specs/001-micropython-port/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-firmware-ui-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-modularize-arduino-firmware/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-switch-button-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-openapi-badge-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-embed-micropython-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-badge-core-primitives/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-ping-mechanic-demo/: SUPERSEDED.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-messaging-cleanup/: plan.md  spec.md
specs/011-one-d-chess/: spec.md
specs/012-hardware-test-harness/: plan.md  spec.md  tasks.md
(+118 files in other folders)
